package com.control.system.domain.enums;

/** Severity of a derived event, used by the UI to colour the annunciator lamp. */
public enum EventSeverity {
    INFO,
    SUCCESS,
    WARNING,
    CRITICAL
}
