package com.control.system.domain.enums;

public enum SystemStatus {
    NORMAL,
    WARNING_TEMP,
    WARNING_HUMIDITY,
    CRITICAL
}
