@startuml class_model
!theme plain
skinparam backgroundColor #FFFFFF
skinparam shadowing false
' Diagrama de clases (UML) — modelo de datos: documentos persistidos, DTO derivado y enums.
title Modelo de datos

class Config <<documento configs>> {
  +id : String
  +temperatureMin : double
  +temperatureMax : double
  +humidityMin : double
  +humidityMax : double
  +hysteresisTemperature : double
  +hysteresisHumidity : double
  +measurementIntervalSeconds : int
  +createdByName : String
  +createdByEmail : String
  +clientIp : String
  +userAgent : String
  +deviceFingerprint : String
  +active : boolean
  +createdAt : Instant
}

class Measurement <<documento measurements>> {
  +id : String
  +temperature : double
  +humidity : double
  +coolerOn : boolean
  +relayOn : boolean
  +status : SystemStatus
  +createdAt : Instant
}

class EventAck <<documento event_acks>> {
  +id : String
  +ackedAt : Instant
}

class EventResponse <<DTO no se persiste>> {
  +id : String
  +time : Instant
  +severity : EventSeverity
  +type : EventType
  +ackable : boolean
  +acknowledged : boolean
}

enum SystemStatus {
  NORMAL
  WARNING_TEMP
  WARNING_HUMIDITY
  CRITICAL
}

enum EventType {
  TEMP_OUT_OF_RANGE
  HUMIDITY_OUT_OF_RANGE
  CRITICAL
  RETURN_TO_NORMAL
  COOLER_ON
  COOLER_OFF
  SENSOR_OFFLINE
}

enum EventSeverity {
  INFO
  SUCCESS
  WARNING
  CRITICAL
}

Config "1 activa" ..> "0..*" Measurement : umbrales e histeresis\nparametrizan cada lectura
Measurement "1" --> "1" SystemStatus : status
Measurement "1" ..> "0..1" EventResponse : deriva transiciones
EventAck "1" ..> "1" EventResponse : reconoce por id
EventResponse "1" --> "1" EventType : type
EventResponse "1" --> "1" EventSeverity : severity
EventType "1" --> "1" EventSeverity : severidad fija

note top of Config
  {invariante} a lo sumo una Config
  con active = true (config vigente)
end note

legend right
  |= Notacion |= Significado |
  | --> | asociacion / uso |
  | ..> | dependencia (derivacion logica, sin FK) |
  | «documento» | se persiste en MongoDB |
  | «DTO» | se calcula por request (no se persiste) |
endlegend
@enduml
